<resources>
    <string name="app_name">AgendaOnline</string>
    <!-- SPLASH CONTENT -->
    <string name="nombreApp">Agenda Online</string>
    <!-- MAIN ACTIVITY -->
    <string name="txtbtnIngresar">Ingresar</string>
    <string name="txtbtnRegistro">Registrarse</string>
    <!-- LOGIN SCREEN -->
    <string name="txtLoginTitle">Inicio de Sesión</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnCrearCuenta">¿No tienes cuenta? Registrate.</string>
    <string name="txtCorreo">Correo Electronico</string>
    <string name="txtPassword">Contraseña</string>

    <!-- REGISTRO SCREEN -->
    <string name="txtCrearCuenta">Crear una cuenta</string>
    <string name="txtNombres">Nombre</string>
    <string name="txtConfirmarContra">Confirmar Contraseña</string>
    <string name="Registrar">Registrar</string>
    <string name="txtTengoCuenta">Tengo una cuenta</string>

    <!-- MENU PRINCIPAL SCREEN -->
    <string name="txtCerrarSesion">Cerrar Sesión</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="direccionCorreo">ejemplo@gmail.com</string>
    <string name="btnAgregarNota">Agregar Nota</string>

    <!-- AGREGAR NOTA SCREEN -->
    <string name="uiUsuario">Ui Usuario</string>
    <string name="correoUsuario">Correo de Usuario</string>
    <string name="currentFecha">Fecha Actual</string>
    <string name="titulo">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="btnCalendario">Fecha</string>
    <string name="initFecha">00/00/0000</string>
    <string name="noFinalizado">No Finalizado</string>
    <string name="btnGuardar">Guardar</string>
</resources>