<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarNota">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/uidUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uiUsuario"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/correoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correoUsuario"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/fechaActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/currentFecha"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="19dp"
            android:hint="@string/titulo"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_bold"/>
        <EditText
            android:id="@+id/tvDescripcion"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:paddingVertical="16dp"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:hint="@string/descripcion"
            android:textSize="19sp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="start"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnCalendario"
                app:icon = "@drawable/baseline_calendar_today_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnCalendario"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txtEstatusTarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noFinalizado"
            android:textSize="16sp"
            android:layout_marginVertical="16dp"
            android:fontFamily="@font/poppins_semibold"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnGuardar"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_bold"/>
    </LinearLayout>

</RelativeLayout>