<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCrearCuenta"
            android:textSize="25sp"
            android:fontFamily="@font/poppins_bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtNombres"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/textCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtCorreo"
                android:drawableStart="@drawable/baseline_alternate_email_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textEmailAddress"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"

                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/txtConfirmarContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txtConfirmarContra"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:padding="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Registrar"
            android:fontFamily="@font/poppins_semibold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTengoCuenta"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>
    </LinearLayout>
</ScrollView>