<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardBackgroundColor="@color/moradoTertiary"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            android:padding="0.2dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombreApp"
                    android:textSize="20sp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@color/white"/>

                <ProgressBar
                    android:id="@+id/loadingData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/moradoPrimary"
                    android:backgroundTint="@color/moradoDark"
                    android:progressTint="@color/moradoPrimary"/>
                <TextView
                    android:id="@+id/txtNombreUsuario"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:text="@string/nombreUsuario"/>
                <TextView
                    android:id="@+id/txtCorreoUsuario"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/white"
                    android:text="@string/direccionCorreo"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnAgregarNota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnAgregarNota"/>

        <Button
            android:id="@+id/btnCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCerrarSesion"
            android:fontFamily="@font/poppins_semibold"
            android:backgroundTint="@color/red"
            android:layout_marginVertical="10dp"/>
    </LinearLayout>

</RelativeLayout>