<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombreApp"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="16dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:tint="@color/moradoTertiary"
                android:src="@drawable/baseline_note_alt_24"/>
            <Button
                android:id="@+id/btnIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtbtnIngresar"
                android:fontFamily="@font/poppins_semibold"/>
            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtbtnRegistro"
                android:fontFamily="@font/poppins_semibold"/>
        </LinearLayout>
</RelativeLayout>