<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="16dp"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtLoginTitle"
            android:textAlignment="textStart"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginVertical="25dp"
            android:textSize="30sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtCorreo"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"/>
        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginBottom="16dp"
            android:padding="12dp"
            android:background="@android:drawable/edit_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtPassword"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_semibold"/>
        <EditText
            android:id="@+id/userPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:inputType="textPassword"
            android:layout_marginBottom="16dp"
            android:padding="12dp"/>

    </LinearLayout>
</RelativeLayout>